openshift/services/redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    name: redis

---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    name: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: redis
    spec:
      containers:
        - image: ${REDIS_IMAGE}
          imagePullPolicy: IfNotPresent
          livenessProbe:
            initialDelaySeconds: 30
            tcpSocket:
              port: 6379
            timeoutSeconds: 1
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -i
                - -c
                - test "$(redis-cli -h 127.0.0.1 ping)" == "PONG"
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          volumeMounts:
            - mountPath: /var/lib/redis/data
              name: redis-data
      restartPolicy: Always
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis

  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - redis
        from:
          kind: ImageStreamTag
          name: redis:5-el8
          namespace: openshift
      type: ImageChange
    - type: ConfigChange
