openshift/services/resalloc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: resalloc
spec:
  ports:
    - name: resalloc
      port: 49100
      targetPort: 49100
  selector:
    name: resalloc


---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: resalloc
spec:
  template:
    metadata:
      labels:
        name: resalloc
    spec:
      containers:
        - name: server
          image: ${RESALLOC_IMAGE}
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: resalloc-data
              mountPath: /var/lib/resallocserver
            - name: resalloc-data
              mountPath: /var/log/resallocserver
            - name: resalloc-config
              mountPath: /etc/resallocserver
            - name: resalloc-home
              mountPath: /resalloc-home
          command: ["/usr/bin/resalloc-server"]

      volumes:
        - name: resalloc-config
          secret:
            secretName: resalloc-config
            optional: false

        - name: resalloc-home
          secret:
            secretName: resalloc-home
            optional: false
            defaultMode: 0600
            items:
              - key: aws_config
                path: .aws/config
              - key: aws_credentials
                path: .aws/credentials
              - key: id_rsa
                path: .ssh/id_rsa
              - key: ssh_config
                path: .ssh/config
              - key: ansible_conf
                path: .ansible.cfg

        - name: resalloc-data
          persistentVolumeClaim:
            claimName: resalloc-data

      restartPolicy: Always

  replicas: 1
  strategy:
    type: Recreate

  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - server
        from:
          kind: ImageStreamTag
          name: resalloc:test
      type: ImageChange

    - type: ConfigChange

# vim: ft=yaml
