openshift/services/backend.yml
# vi: ft=yaml
---
apiVersion: v1
kind: Service
metadata:
  name: copr-backend
spec:
  ports:
    - name: copr-backend-httpd
      port: 8080
      targetPort: 8080
  selector:
    name: copr-backend-httpd

---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: copr-backend
spec:
  template:
    metadata:
      labels:
        name: copr-backend
    spec:
      containers:
        - name: log
          image: ${COPR_BACKEND_IMAGE}
          imagePullPolicy: IfNotPresent
          command: ["/usr/bin/tini", "--"]
          args: ["/usr/bin/copr_run_logger.py"]
          volumeMounts:
            - name: config
              mountPath: /etc/copr
            - name: logs
              mountPath: /var/log/copr-backend

        - name: actions
          image: ${COPR_BACKEND_IMAGE}
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /etc/copr
            - name: results
              mountPath: /var/lib/copr/public_html
            - name: locks
              mountPath: /var/lock/copr-backend
          command: ["/usr/bin/tini", "--"]
          args: ["/run-backend", "--sign-host", "copr-keygen", "/usr/bin/copr-run-dispatcher-backend", "actions"]

        - name: builds
          image: ${COPR_BACKEND_IMAGE}
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /etc/copr
            - name: results
              mountPath: /var/lib/copr/public_html
            - name: locks
              mountPath: /var/lock/copr-backend
            - name: home
              mountPath: /backend-home
          command: ["/usr/bin/tini", "--"]
          args: ["/run-backend", "--sign-host", "copr-keygen", "/usr/bin/copr-run-dispatcher-backend", "builds"]

      # start these containers on the same node with copr-backend-httpd!
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - copr-backend-httpd
              topologyKey: kubernetes.io/hostname


      volumes:
        - name: config
          secret:
            secretName: copr-backend-config
            optional: false

        - name: home
          secret:
            secretName: backend-home
            optional: false
            defaultMode: 0600
            items:
              - key: id_rsa
                path: .ssh/id_rsa
              - key: ssh_config
                path: .ssh/config

        - name: logs
          persistentVolumeClaim:
            claimName: copr-backend-logs

        - name: results
          persistentVolumeClaim:
            claimName: copr-backend-results

        - name: locks
          persistentVolumeClaim:
            claimName: copr-backend-locks

      restartPolicy: Always

  replicas: 1
  strategy:
    type: Recreate

  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - actions
          - builds
          - log
        from:
          kind: ImageStreamTag
          name: copr-backend:test
      type: ImageChange

    - type: ConfigChange


---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: copr-backend-httpd
spec:
  template:
    metadata:
      labels:
        name: copr-backend-httpd
    spec:
      containers:
        - name: httpd
          image: ${NGINX_IMAGE}
          imagePullPolicy: IfNotPresent
          command: ["nginx", "-g", "daemon off;"]
          volumeMounts:
            - name: results
              mountPath: /opt/app-root/src
            - name: config
              mountPath: /opt/app-root/etc/nginx.d/

      volumes:
        - name: results
          persistentVolumeClaim:
            claimName: copr-backend-results

        - name: config
          secret:
            secretName: copr-backend-httpd-config
            optional: false

      restartPolicy: Always

  replicas: 1
  strategy:
    type: Recreate

  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - httpd
        from:
          kind: ImageStreamTag
          name: copr-backend-httpd:test
      type: ImageChange

    - type: ConfigChange

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: copr-backend
spec:
  port:
    targetPort: copr-backend-httpd
  to:
    kind: Service
    name: copr-backend
